# socktail-rs

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NATIVE_TAILSCALE.md  NEXT_STEPS.md  PHASE4_COMPLETE.md  README.md  READY_TO_RELEASE.md  RELEASE.md  STATUS.md  WINDOWS.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
lib/: README.md
scripts/: build-all.sh  release.sh  test-build.sh
src/: lib.rs  main.rs
src/crypto/: mod.rs  xor.rs
src/socks5/: mod.rs  protocol.rs  relay.rs  server.rs
src/utils/: hostname.rs  mod.rs
src/vpn/: libtailscale.rs  mod.rs  tailscale.rs  tailscale_native.rs  tailscale_rust.rs
