[package]
name = "socktail"
version = "0.1.0"
edition = "2021"
authors = ["SockTail Contributors"]
license = "MIT"
description = "Fast SOCKS5 proxy over Tailscale VPN, written in Rust"
repository = "https://github.com/yourusername/socktail-rs"
homepage = "https://github.com/yourusername/socktail-rs"
readme = "README.md"
keywords = ["socks5", "proxy", "tailscale", "vpn", "networking"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"

# Native Tailscale integration
libtailscale = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
hex = "0.4"

[features]
default = ["native-tailscale"]
native-tailscale = ["libtailscale"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "throughput"
harness = false
