[package]
name = "socktail"
version = "0.1.0"
edition = "2021"
authors = ["SockTail Contributors"]
license = "MIT"
description = "Fast SOCKS5 proxy over Tailscale VPN, written in Rust"
repository = "https://github.com/yourusername/socktail-rs"
homepage = "https://github.com/yourusername/socktail-rs"
readme = "README.md"
keywords = ["socks5", "proxy", "tailscale", "vpn", "networking"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"

# Pure Rust Tailscale implementation
boringtun = "0.6"          # WireGuard implementation
tun = "0.6"                # TUN device
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }  # HTTP client
x25519-dalek = "=2.0.0-rc.3"  # Key exchange (match boringtun version)
chacha20poly1305 = "0.10"  # Encryption
blake2 = "0.10"            # Hashing
base64 = "0.21"            # Encoding
url = "2.5"                # URL parsing

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
hex = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "throughput"
harness = false
